Estilos del Dark Mode realizados y probados correctamente

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -14,6 +14,10 @@ body {
   font-family: v.$fuente_textos;
   font-size: 1.6rem;
   min-height: 100%;
+
+  &.dashboard-background {
+    background-color: v.$grisClaro;
+  }
 }
 .contenedor {
   width: 95%;
